--- a/theme.css
+++ b/theme.css
@@ -5,11 +5,11 @@
  * @description A very simple for of ClearVision.
  * @source https://github.com/ganjamancer/discordtheme
  * @website https://scrv.xyz
- * @invite https://discord.gg/Hz6tRECq9E
+ * @invite Hz6tRECq9E
  */
 
 /* IMPORT CSS */
-@import url(https://raw.githubusercontent.com/hrtaddict/discordtheme/main/main.css);
+@import url(https://raw.githubusercontent.com/ganjamancer/discordtheme/main/main.css);
 
 /* SETTINGS */
 :root {
